tests/expectations/parser/structs/only_comma_separators_fail.out
Error [EPAR0370041]: Each member declaration in a struct or record must be followed by a comma (except the last).
    --> test:3:14
     |
   3 |         x: u8;
     |              ^
Error [EPAR0370009]: unexpected string: expected 'identifier', found ';'
    --> test:3:14
     |
   3 |         x: u8;
     |              ^
